[package]
name = "plant"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[features]
gpu-runtime = ["plant-runtime/gpu-runtime"]

[dependencies]
expr-macro = { path = "expr-macro" }
plant-runtime = { path = "runtime" }
isl = { path = "isl-rs" }
log = "0.4"
env_logger = "0.8"
ahash = { version = "*", default-features = false }
tempfile = "3"
xgboost = { git = "https://github.com/MashPlant/rust-xgboost" }
scoped_threadpool = "0.1"
libc = "0.2"
byteorder = "1"

[dev-dependencies]
test-case = "1"

[[bin]]
name = "gemm_cpu"
path = "bench/gemm_cpu.rs"

[[bin]]
name = "conv_cpu"
path = "bench/conv_cpu.rs"

[[bin]]
name = "gemm_gpu"
path = "bench/gemm_gpu.rs"
required-features = ["gpu-runtime"]

[[bin]]
name = "conv_gpu"
path = "bench/conv_gpu.rs"
required-features = ["gpu-runtime"]

[[bin]]
path = "bench/resnet.rs"
name = "resnet"

[[bin]]
path = "bench/tune_resnet_conv.rs"
name = "tune_resnet_conv"
