[package]
name = "plant-runtime"
version = "0.1.0"
authors = ["MashPlant <740678788@qq.com>"]
edition = "2018"

[features]
gpu-runtime = ["cuda-runtime-sys"]

[dependencies]
num = { version = "0.3", default-features = false }
cuda-runtime-sys = { version = "0.3.0-alpha", optional = true }

[build-dependencies]
cc = "1.0"
